[package]
name = "rust-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
futures-intrusive = "0.5.0"
image = "0.25.8"
pollster = "0.4.0"
thiserror = "2.0.17"
wgpu = { version = "27.0.1", optional = true }
winit = { version = "0.30.12", optional = true }

[features]
graphics = ["wgpu", "winit"]
