[package]
name = "rust-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
futures-intrusive = "0.5.0"
image = "0.25.8"
pollster = "0.4.0"
thiserror = "2.0.17"
wgpu = { version = "27.0.1", optional = true }
winit = { version = "0.30.12", optional = true }
egui = { version = "0.33.3", optional = true }
egui-wgpu = { version = "0.33.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.33.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.33.3", optional = true, default-features = false, features = ["links"] }

[features]
graphics = ["wgpu", "winit", "egui", "egui-wgpu", "egui-winit"]
